Fixed Edge scrollbar being over content & project images not fading in

--- a/src/sass/base/_root.scss
+++ b/src/sass/base/_root.scss
@@ -25,7 +25,6 @@ html {
  * 1. Fixes some typography bugs.
  */
 body {
-  overflow-x: inherit;
   font: #{$root-font-size} / 1.5 $sans-serif-font-stack;
   color: $grey;
   background-color: $black;
